update logs and sync chain between peers